samples/libssh/_sources/group_libssh_error.rst.txt
.. index:: pair: group; The SSH error functions.
.. _doxid-group__libssh__error:

The SSH error functions.
========================

.. toctree::
	:hidden:

Overview
~~~~~~~~

Functions for error handling. :ref:`More...<details-group__libssh__error>`


.. ref-code-block:: cpp
	:class: doxyrest-overview-code-block

	
	// global functions

	const char*
	:ref:`ssh_get_error<doxid-group__libssh__error_1ga9241586665bf21f823806473fc386258>`(void* error);

	int
	:ref:`ssh_get_error_code<doxid-group__libssh__error_1ga036433b7bf3d4ca94206253f58d136f9>`(void* error);

	void
	:target:`_ssh_set_error<doxid-group__libssh__error_1ga03ff45cb8af89234c4c83beb6e7a8eab>`(
		void* error,
		int code,
		const char* function,
		const char* descr,
		...
		);

	void
	:target:`_ssh_set_error_invalid<doxid-group__libssh__error_1ga5db8187e6666f7b255b80197f53fd359>`(
		void* error,
		const char* function
		);

	void
	:target:`_ssh_set_error_oom<doxid-group__libssh__error_1ga9d1eb111a8215cc82a9ad8bc3885c7df>`(
		void* error,
		const char* function
		);

.. _details-group__libssh__error:

Detailed Documentation
~~~~~~~~~~~~~~~~~~~~~~

Functions for error handling.

Global Functions
----------------

.. index:: pair: function; ssh_get_error
.. _doxid-group__libssh__error_1ga9241586665bf21f823806473fc386258:

.. ref-code-block:: cpp
	:class: doxyrest-title-code-block

	const char*
	ssh_get_error(void* error)

Retrieve the error text message from the last error.



.. rubric:: Parameters:

.. list-table::
	:widths: 20 80

	*
		- error

		- An ssh_session or ssh_bind.



.. rubric:: Returns:

A static string describing the error.

.. index:: pair: function; ssh_get_error_code
.. _doxid-group__libssh__error_1ga036433b7bf3d4ca94206253f58d136f9:

.. ref-code-block:: cpp
	:class: doxyrest-title-code-block

	int
	ssh_get_error_code(void* error)

Retrieve the error code from the last error.



.. rubric:: Parameters:

.. list-table::
	:widths: 20 80

	*
		- error

		- An ssh_session or ssh_bind.



.. rubric:: Returns:

SSH_NO_ERROR No error occurred

SSH_REQUEST_DENIED The last request was denied but situation is recoverable

SSH_FATAL A fatal error occurred. This could be an unexpected disconnection

Other error codes are internal but can be considered same than SSH_FATAL.

